welcome section title

--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -10,6 +10,14 @@ body{
   color: $primary-black;
 }
 
+.content{
+  width: 1200px;
+  margin: {
+    left: auto;
+    right: auto;
+  }
+}
+
 .heading{
   &-1,
   &-2,
