--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,7 +3,7 @@ $primary-black: #353535;
 $primary-white: #ffffff;
 $primary-red: #E04343;
 $primary-grey: #a1a9b0;
-$primary-orange: #FFE800;
+$primary-yellow: #FFE800;
 
 $primary-font: 'Roboto', sans-serif;;
 $primary-fontSize: 16px;
