--- a/src/App.css
+++ b/src/App.css
@@ -398,6 +398,11 @@ body {
   font-size: 16px;
   color: #353535; }
 
+.content {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto; }
+
 .heading-1, .heading-2, .heading-3, .heading-4, .heading-5, .heading-6 {
   margin-top: 0;
   margin-bottom: 15px;
