--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,8 +3,8 @@ $primary-black: #353535;
 $primary-white: #ffffff;
 $primary-red: #E04343;
 $primary-grey: #a1a9b0;
-$primary-yellow: #FFE800;
+$primary-green: #84B71D;
 
 $primary-font: 'Roboto', sans-serif;;
-$primary-fontSize: 16px;
+$primary-fontSize: 18px;
 
