--- a/src/components/about/styles.scss
+++ b/src/components/about/styles.scss
@@ -5,13 +5,6 @@
  * =========
  */
 .about{
-  $gutter: 50px;
-
-  padding: {
-    top: $gutter;
-    bottom: $gutter;
-  }
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,12 +12,23 @@
   
   /* about us */
   &__us{
-
+    padding: {
+      top: 50px;
+      bottom: 50px;
+    }
+    &-text{
+      font-size: 1.25rem;
+      text-align: center;
+    }
   }
 
   /* about delivery */
   &__delivery{
     width: 100%;
+    padding: {
+      top: 50px;
+      bottom: 50px;
+    }
 
     display: flex;
     align-items: flex-start;
@@ -54,12 +58,12 @@
 
   /* title */
   &__title{
-
+    text-transform: uppercase;
   }
 
   /* text */
   &__text{
-
+    color: $primary-grey;
   }
 }
 
@@ -69,43 +73,62 @@
  */
 .bait-types-item{
   display: flex;
-  
-  /* item sides */
-  &__image-wrapper,
-  &__content{
-    flex: {
-      shrink: 0;
-      basis: 50%;
-      grow: 0;
-    }
-    flex-basis: 50%;
+  margin-bottom: 15px;
 
+  &--reversed{
+    .bait-types-item__content{
+      float: right;
+    }
   }
 
   /* image */
   &__image-wrapper{
+    padding: 40px 50px;
+
     background: {
       position: 50%;
       size: cover;
       repeat: no-repeat;
-      color: $primary-red;
     }
   }
   
   /* content => wrapper for title && text */
   &__content{
+    width: 80%;
+
     padding: 50px;
-
-    background-color: $primary-red;
+    background-color: rgba($primary-white, .8);
   }
-
+  
+  &__title,
+  &__text{
+    color: $primary-black;
+  }
   /* title */
   &__title{
+    position: relative;
+    margin-bottom: 40px;
 
+    text-transform: uppercase;
+    font-weight: 400;
+
+    &::after{
+      content: '';
+      display: block;
+      width: 100px;
+      height: 2px;
+
+      position: absolute;
+      bottom: -20px; left: 0;
+      z-index: 2;
+
+      background-color: $primary-black;
+    }
   }
 
   /* text */
   &__text{
-
+    margin: 0;
+    line-height: 2rem;
   }
 }
