--- a/static/src/assets/styles/_variables.scss
+++ b/static/src/assets/styles/_variables.scss
@@ -5,6 +5,8 @@ $primary-red: #E04343;
 $primary-grey: #a1a9b0;
 $primary-green: #84B71D;
 
+$body-bg: #f6f8fa;
+
 $primary-font: 'Roboto', sans-serif;;
 $primary-fontSize: 18px;
 
