--- a/static/src/assets/styles/_layout.scss
+++ b/static/src/assets/styles/_layout.scss
@@ -52,3 +52,24 @@ body{
     font-size: 0.8889rem;
   }
 }
+
+/* motto */
+.motto{
+  &-wrapper{
+    width: 100%;
+    padding: {
+      top: 25px;
+      bottom: 25px;
+    }
+
+    background: $primary-black;
+
+    &__text{
+      margin: 0;
+
+      font-size: 1.25rem;
+      text-align: center;
+      color: $primary-white;  
+    }
+  }
+}
