--- a/static/src/components/about-bait-types/styles.css
+++ b/static/src/components/about-bait-types/styles.css
@@ -1,56 +1,9 @@
 /* == Theme == */
-/*
- * About def
- * =========
- */
-.about {
+.about-bait-types {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  /* about us */
-  /* about delivery */
-  /* about bait types */ }
-  .about__us-text-wrapper {
-    width: 100%;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background: #353535; }
-  .about__us-text {
-    margin: 0;
-    font-size: 1.25rem;
-    text-align: center;
-    color: #ffffff; }
-  .about__delivery {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: wrap; }
+  flex-direction: column; }
 
-/* 
- * Delivery item
- * =============
- */
-.delivery-item {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  flex-shrink: 0;
-  flex-basis: 50%;
-  flex-grow: 0;
-  /* title */
-  /* text */ }
-  .delivery-item__title {
-    text-transform: uppercase; }
-  .delivery-item__text {
-    color: #a1a9b0; }
-
-/* 
- * Bait type item 
- * ==============
- */
 .bait-types-item {
   margin-bottom: 30px;
   background-position: 50%;
