bait preview wrapper, bait preview

--- a/static/src/components/bait-preview/styles.css
+++ b/static/src/components/bait-preview/styles.css
@@ -1,1 +1,17 @@
 /* == Theme == */
+.bait-preview {
+  flex: 0 0 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px; }
+  .bait-preview__image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden; }
+    .bait-preview__image img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      flex-shrink: 0; }
