--- a/static/src/components/bait-preview-wrapper/styles.scss
+++ b/static/src/components/bait-preview-wrapper/styles.scss
@@ -1,1 +1,11 @@
 @import "assets/styles/_variables.scss";
+
+.bait-preview-wrapper{
+	display: flex;
+	flex-wrap: wrap;
+
+	margin: {
+		left: -10px;
+		right: -10px;
+	}
+}
