--- a/static/src/components/bait-preview/styles.scss
+++ b/static/src/components/bait-preview/styles.scss
@@ -1,7 +1,7 @@
 @import "assets/styles/_variables.scss";
 
 .bait-preview{
-	flex: 0 0 25%;
+	flex: 0 0 50%;
 	margin: {
 		top: 10px;
 		bottom: 10px;
@@ -11,12 +11,29 @@
 		right: 10px;
 	}
 
+	&__link{
+		display: block;
+		text-decoration: none;
+
+		background-color: $primary-white;
+		transition:  .2s linear;
+
+		&:hover{
+			box-shadow: 0 5px 10px 0 rgba($primary-black, .5);
+		}
+	}
+
+	&__content{
+		padding: 15px 25px;
+	}
+
 	&__image{
 		display: flex;
 		align-items: center;
 		justify-content: center;
 
 		overflow: hidden;
+
 		img{
 			display: block;
 			max-width: 100%;
@@ -25,7 +42,21 @@
 			flex-shrink: 0;
 		}
 	}
+
+	&__title{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		color: $primary-black;
+	}
 	&__name{}
-	&__weight{}
-	&__price{}
+	&__weight{
+		font-size: 1.25rem;
+	}
+
+	&__price{
+		font-size: 1.25rem;
+		color: $primary-red;
+	}
 }
