--- a/static/src/components/bait-preview-wrapper/styles.scss
+++ b/static/src/components/bait-preview-wrapper/styles.scss
@@ -3,7 +3,11 @@
 .bait-preview-wrapper{
 	display: flex;
 	flex-wrap: wrap;
-
+	
+	padding: {
+		top: 90px;
+		bottom: 90px;
+	}
 	margin: {
 		left: -10px;
 		right: -10px;
