--- a/static/src/components/welcome/styles.css
+++ b/static/src/components/welcome/styles.css
@@ -8,16 +8,20 @@
   background-image: url("../../assets/images/welcome-bg.jpg");
   background-repeat: no-repeat;
   background-position: right bottom;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
   .welcome__title {
     font-weight: normal;
-    text-align: left; }
+    text-align: left;
+    border-top: 2px solid #353535;
+    display: inline-block; }
     .welcome__title--red, .welcome__title--green {
       display: inline-block; }
     .welcome__title--red {
       color: #E04343; }
     .welcome__title--custom {
       margin: 0;
+      color: #E04343;
       line-height: 50px;
       font-size: 120px;
       font-weight: normal;
@@ -30,6 +34,11 @@
       font-weight: 300;
       font-family: "Roboto", sans-serif;
       text-transform: uppercase; }
+    .welcome__title--small {
+      margin: 15px 0 0 0;
+      text-align: center;
+      font-family: "Great Vibes", cursive;
+      font-size: 35px; }
 
 @keyframes ani-mouse {
   0% {
@@ -48,14 +57,15 @@
 .scroll-down {
   position: absolute;
   left: 50%;
-  bottom: 0;
-  z-index: 2; }
+  bottom: 20px;
+  z-index: 2;
+  margin-left: -18px; }
   .scroll-down__btn {
     display: block; }
   .scroll-down__mouse {
     position: relative;
     display: block;
-    width: 35px;
+    width: 36px;
     height: 55px;
     border: 3px solid rgba(255, 255, 255, 0.5);
     border-radius: 23px; }
@@ -70,3 +80,34 @@
       border-radius: 50%;
       background: #ffffff;
       animation: ani-mouse 2.5s linear infinite; }
+
+.socials-wrapper {
+  position: fixed;
+  top: 25px;
+  right: 25px;
+  z-index: 2; }
+  .socials-wrapper .socials {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; }
+    .socials-wrapper .socials li {
+      margin-bottom: 15px; }
+    .socials-wrapper .socials a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      text-decoration: none;
+      color: #353535;
+      opacity: .3;
+      transition: .25s linear; }
+      .socials-wrapper .socials a:hover {
+        opacity: 1; }
+        .socials-wrapper .socials a:hover svg {
+          fill: #E04343; }
+    .socials-wrapper .socials svg {
+      width: 40px;
+      height: 40px; }
