--- a/static/src/App.css
+++ b/static/src/App.css
@@ -402,9 +402,14 @@ body {
   background-color: #f6f8fa; }
 
 .content {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto; }
+  @media (max-width: 1280px) {
+    .content {
+      width: 90%; } }
+  @media (min-width: 1281px) {
+    .content {
+      width: 1200px; } }
 
 .font-secondary {
   font-family: "Great Vibes", cursive; }
