--- a/static/src/assets/styles/_variables.scss
+++ b/static/src/assets/styles/_variables.scss
@@ -11,3 +11,12 @@ $primary-font: 'Roboto', sans-serif;;
 $primary-fontSize: 18px;
 $secondary-font: 'Great Vibes', cursive;
 
+$screen-xs: 569px;
+$screen-xs-max: $screen-xs - 1;
+$screen-sm: 769px;
+$screen-sm-max: $screen-sm - 1;
+$screen-md: 992px;
+$screen-md-max: $screen-md - 1;
+$screen-lg: 1281px;
+$screen-lg-max: $screen-lg - 1;
+
