--- a/static/src/components/about-bait-types/styles.css
+++ b/static/src/components/about-bait-types/styles.css
@@ -9,21 +9,35 @@
   background-position: 50%;
   background-size: contain;
   background-repeat: no-repeat;
+  /* image && content */
   /* image */
   /* content => wrapper for title && text */
   /* title */
   /* text */ }
   .bait-types-item .content {
     display: flex; }
+    @media (max-width: 991px) {
+      .bait-types-item .content {
+        flex-direction: column; } }
+  @media (min-width: 992px) {
+    .bait-types-item__image-wrapper, .bait-types-item__content {
+      flex-basis: 50%; } }
   .bait-types-item__image-wrapper {
-    flex-basis: 50%;
     background-position: 50%;
     background-size: cover;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-color: #353535; }
+    @media (max-width: 991px) {
+      .bait-types-item__image-wrapper {
+        height: 50vh; } }
   .bait-types-item__content {
-    flex-basis: 50%;
-    padding: 30px;
     background-color: #ffffff; }
+    @media (max-width: 991px) {
+      .bait-types-item__content {
+        padding: 15px; } }
+    @media (min-width: 992px) {
+      .bait-types-item__content {
+        padding: 30px; } }
   .bait-types-item__title, .bait-types-item__text {
     color: #353535; }
   .bait-types-item__title {
@@ -40,7 +54,7 @@
       bottom: -20px;
       left: 0;
       z-index: 2;
-      background-color: #353535; }
+      background-color: #E04343; }
   .bait-types-item__text {
     margin: 0;
     line-height: 2rem; }
