--- a/static/src/components/bait-preview/styles.css
+++ b/static/src/components/bait-preview/styles.css
@@ -1,10 +1,15 @@
 /* == Theme == */
 .bait-preview {
-  flex: 0 0 50%;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px; }
+  @media (max-width: 568px) {
+    .bait-preview {
+      flex: 0 0 100%; } }
+  @media (min-width: 569px) {
+    .bait-preview {
+      flex: 0 0 50%; } }
   .bait-preview__link {
     display: block;
     text-decoration: none;
