--- a/static/src/components/bait-view/styles.scss
+++ b/static/src/components/bait-view/styles.scss
@@ -1,2 +1,65 @@
 @import "assets/styles/_variables.scss";
 
+/* bait item view */
+.bait-view{
+
+  /* gallery */
+  &-gallery{
+    display: flex;
+    flex-wrap: wrap;
+    
+    padding: {
+      top: 4px;
+      left: 2px;
+      right: 2px;
+    }
+    box-shadow: inset 0 0 0 1px $primary-grey;
+    
+    /* gallery item */
+    &__item{
+      padding: {
+        left: 2px;
+        right: 2px;
+        bottom: 4px;
+      }
+      height: 33vh;
+
+      @media(min-width: $screen-sm) and (max-width: $screen-md-max){
+        flex-basis: 50%;
+      }
+      @media(min-width: $screen-md){
+        flex-basis: calc(100% / 3);
+      }
+    }
+
+    img{
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      object-fit: cover;
+
+      flex-shrink: 0;
+    }
+  }
+
+  /* name */
+  &__name{
+
+  }
+
+  /* weight */
+  &__weight{
+
+  }
+
+  /* description */
+  &__description{
+
+  }
+
+  /* price */
+  &__price{
+
+  }
+}
