--- a/static/src/components/bait-view/styles.css
+++ b/static/src/components/bait-view/styles.css
@@ -1,14 +1,22 @@
 /* == Theme == */
 /* bait item view */
 .bait-view {
+  width: 100%;
+  float: left;
   /* gallery */
+  /* title */
   /* name */
   /* weight */
   /* description */
   /* price */ }
+  .bait-view-gallery, .bait-view__content {
+    width: 50%;
+    float: left; }
+  .bait-view__content {
+    padding: 25px;
+    top: 0;
+    position: sticky; }
   .bait-view-gallery {
-    display: flex;
-    flex-wrap: wrap;
     padding-top: 4px;
     padding-left: 2px;
     padding-right: 2px;
@@ -18,16 +26,16 @@
       padding-left: 2px;
       padding-right: 2px;
       padding-bottom: 4px;
-      height: 33vh; }
-      @media (min-width: 769px) and (max-width: 991px) {
-        .bait-view-gallery__item {
-          flex-basis: 50%; } }
-      @media (min-width: 992px) {
-        .bait-view-gallery__item {
-          flex-basis: calc(100% / 3); } }
+      width: 100%; }
     .bait-view-gallery img {
       display: block;
       width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: cover;
       flex-shrink: 0; }
+  .bait-view__title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  .bait-view__weight {
+    font-size: 1.25rem; }
