--- a/static/src/components/bait-view/styles.scss
+++ b/static/src/components/bait-view/styles.scss
@@ -2,11 +2,21 @@
 
 /* bait item view */
 .bait-view{
+  width: 100%;
+  float: left;
 
+  &-gallery,
+  &__content{
+    width: 50%;
+    float: left;
+  }
+  &__content{
+    padding: 25px;
+    top: 0;
+    position:sticky;
+  }
   /* gallery */
   &-gallery{
-    display: flex;
-    flex-wrap: wrap;
     
     padding: {
       top: 4px;
@@ -22,25 +32,25 @@
         right: 2px;
         bottom: 4px;
       }
-      height: 33vh;
-
-      @media(min-width: $screen-sm) and (max-width: $screen-md-max){
-        flex-basis: 50%;
-      }
-      @media(min-width: $screen-md){
-        flex-basis: calc(100% / 3);
-      }
+      width: 100%;
     }
 
     img{
       display: block;
       width: 100%;
-      height: 100%;
+      height: auto;
 
       object-fit: cover;
 
       flex-shrink: 0;
     }
+  }
+  
+  /* title */
+  &__title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   /* name */
@@ -50,7 +60,7 @@
 
   /* weight */
   &__weight{
-
+    font-size: 1.25rem;
   }
 
   /* description */
