--- a/static/src/components/bait-view/styles.css
+++ b/static/src/components/bait-view/styles.css
@@ -1,32 +1,34 @@
 /* == Theme == */
 /* bait item view */
 .bait-view {
+  position: relative;
   width: 100%;
   float: left;
+  padding-top: 50px;
+  padding-bottom: 50px;
   /* gallery */
   /* title */
   /* name */
   /* weight */
   /* description */
   /* price */ }
-  .bait-view-gallery, .bait-view__content {
-    width: 50%;
-    float: left; }
   .bait-view__content {
+    width: calc(50% - 25px);
+    margin-left: 25px;
     padding: 25px;
+    float: left;
+    position: sticky;
     top: 0;
-    position: sticky; }
+    background-color: #ffffff; }
   .bait-view-gallery {
-    padding-top: 4px;
-    padding-left: 2px;
-    padding-right: 2px;
-    box-shadow: inset 0 0 0 1px #a1a9b0;
+    width: 50%;
+    float: left;
     /* gallery item */ }
     .bait-view-gallery__item {
-      padding-left: 2px;
-      padding-right: 2px;
-      padding-bottom: 4px;
-      width: 100%; }
+      width: 100%;
+      padding: 15px;
+      margin-bottom: 25px;
+      background-color: #ffffff; }
     .bait-view-gallery img {
       display: block;
       width: 100%;
@@ -37,5 +39,32 @@
     display: flex;
     align-items: center;
     justify-content: space-between; }
+  .bait-view__name {
+    margin: 0;
+    text-transform: uppercase; }
   .bait-view__weight {
-    font-size: 1.25rem; }
+    font-size: 1.25rem;
+    font-weight: normal; }
+  .bait-view__price {
+    margin-bottom: 40px;
+    font-size: 1.5rem;
+    color: #E04343; }
+
+.button--back {
+  border: 0;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  background-color: inherit;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  z-index: 2;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: normal; }
+  .button--back svg {
+    display: inline-block;
+    margin-right: 10px; }
