--- a/static/src/App.scss
+++ b/static/src/App.scss
@@ -1,3 +1,4 @@
 @import 'assets/styles/_normalize.scss';
 @import 'assets/styles/_variables.scss';
 @import 'assets/styles/_layout.scss';
+@import 'assets/styles/_global.scss';
