--- a/static/src/components/about-bait-types/styles.css
+++ b/static/src/components/about-bait-types/styles.css
@@ -1,4 +1,15 @@
-/* == Theme == */
+/*
+ * Theme colors
+ */
+/*
+ * element colors
+ */
+/*
+ * Font
+ */
+/*
+ * Grid mediaqueries
+ */
 .about-bait-types {
   display: flex;
   justify-content: center;
