--- a/static/src/components/bait-view/styles.css
+++ b/static/src/components/bait-view/styles.css
@@ -1,4 +1,15 @@
-/* == Theme == */
+/*
+ * Theme colors
+ */
+/*
+ * element colors
+ */
+/*
+ * Font
+ */
+/*
+ * Grid mediaqueries
+ */
 /* bait item view */
 .bait-view {
   position: relative;
