--- a/static/src/components/bait-preview-wrapper/styles.css
+++ b/static/src/components/bait-preview-wrapper/styles.css
@@ -1,4 +1,15 @@
-/* == Theme == */
+/*
+ * Theme colors
+ */
+/*
+ * element colors
+ */
+/*
+ * Font
+ */
+/*
+ * Grid mediaqueries
+ */
 /* bait wrapper */
 .bait-preview-wrapper {
   display: flex;
