--- a/static/src/components/welcome/styles.css
+++ b/static/src/components/welcome/styles.css
@@ -1,4 +1,15 @@
-/* == Theme == */
+/*
+ * Theme colors
+ */
+/*
+ * element colors
+ */
+/*
+ * Font
+ */
+/*
+ * Grid mediaqueries
+ */
 /* welcome slide */
 .welcome {
   height: 100vh;
